kubernetes/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
  namespace: retailsense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:v2.11.3
          imagePullPolicy: IfNotPresent
          command: ["mlflow"]
          args:
            - "server"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "5000"
            - "--backend-store-uri"
            - "sqlite:////mlruns/mlflow.db"
            - "--default-artifact-root"
            - "/mlruns/artifacts"
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: mlruns
              mountPath: /mlruns
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
      volumes:
        - name: mlruns
          emptyDir: {}
