kubernetes/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  namespace: retailsense
spec:
  selector:
    app: mlflow
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30500
